protocol 라이브러리 추가 및 테스트 코드 작성

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -63,3 +63,4 @@ ADD_EXECUTABLE(${TARGET_NAME} ${SOURCES})
 target_link_libraries(${TARGET_NAME} cppcore)
 target_link_libraries(${TARGET_NAME} dl)
 target_link_libraries(${TARGET_NAME} pthread)
+target_link_libraries(${TARGET_NAME} protocol)
