EpollServer 클래스 구현
- 에이전트와 통신 테스트 수행
- 임시 패킷 구조체 작성

--- a/src/Server/Server.vcxproj
+++ b/src/Server/Server.vcxproj
@@ -163,9 +163,11 @@
     <TargetName>server</TargetName>
   </PropertyGroup>
   <ItemGroup>
+    <ClCompile Include="EpollServer.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="EpollServer.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
