--- a/src/Server/Server.vcxproj
+++ b/src/Server/Server.vcxproj
@@ -164,10 +164,12 @@
   </PropertyGroup>
   <ItemGroup>
     <ClCompile Include="EpollServer.cpp" />
+    <ClCompile Include="EpollServerException.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="EpollServer.h" />
+    <ClInclude Include="EpollServerException.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
