멘토링 피드백 반영
- Epoll Class 싱글톤 구현
- Message 처리 Class 구현
- 스레드 풀을 async로 대체

--- a/src/Server/Server.vcxproj
+++ b/src/Server/Server.vcxproj
@@ -163,11 +163,13 @@
     <TargetName>server</TargetName>
   </PropertyGroup>
   <ItemGroup>
-    <ClCompile Include="EpollServer.cpp" />
+    <ClCompile Include="CMessage.cpp" />
+    <ClCompile Include="CEpollServer.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="EpollServer.h" />
+    <ClInclude Include="CMessage.h" />
+    <ClInclude Include="CEpollServer.h" />
     <ClInclude Include="EpollServerException.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
