--- a/src/Server/Server.vcxproj
+++ b/src/Server/Server.vcxproj
@@ -166,6 +166,7 @@
     <ClCompile Include="CLogger.cpp" />
     <ClCompile Include="CMessage.cpp" />
     <ClCompile Include="CEpollServer.cpp" />
+    <ClCompile Include="Function.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -173,6 +174,7 @@
     <ClInclude Include="CMessage.h" />
     <ClInclude Include="CEpollServer.h" />
     <ClInclude Include="CEpollServerException.h" />
+    <ClInclude Include="Function.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
