--- a/src/Server/Server.vcxproj
+++ b/src/Server/Server.vcxproj
@@ -163,11 +163,20 @@
     <TargetName>server</TargetName>
   </PropertyGroup>
   <ItemGroup>
+    <ClCompile Include="CLogger.cpp" />
+    <ClCompile Include="CMessage.cpp" />
+    <ClCompile Include="CEpollServer.cpp" />
+    <ClCompile Include="Function.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="RestApiServer.cpp" />
     <ClCompile Include="SampleRestApi.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CLogger.h" />
+    <ClInclude Include="CMessage.h" />
+    <ClInclude Include="CEpollServer.h" />
+    <ClInclude Include="CEpollServerException.h" />
+    <ClInclude Include="Function.h" />
     <ClInclude Include="RestApiServer.h" />
     <ClInclude Include="SampleRestApi.h" />
     <ClInclude Include="stdafx.h" />
