데이터 베이스 클래스 변경
- getFiledList 추가
- getRowList 추가
- LastResponsePK 추가

--- a/src/Server/Server.vcxproj.filters
+++ b/src/Server/Server.vcxproj.filters
@@ -7,7 +7,7 @@
     <ClInclude Include="Function.h" />
     <ClInclude Include="RestApiServer.h" />
     <ClInclude Include="SampleRestApi.h" />
-    <ClInclude Include="dbconnection.h" />
+    <ClInclude Include="CDatabase.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CMessage.cpp" />
@@ -16,6 +16,6 @@
     <ClCompile Include="RestApiServer.cpp" />
     <ClCompile Include="SampleRestApi.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="dbconnection.cpp" />
+    <ClCompile Include="CDatabase.cpp" />
   </ItemGroup>
 </Project>
