--- a/src/Server/Server.vcxproj
+++ b/src/Server/Server.vcxproj
@@ -163,7 +163,7 @@
     <TargetName>server</TargetName>
   </PropertyGroup>
   <ItemGroup>
-    <ClCompile Include="dbconnection.cpp" />
+    <ClCompile Include="CDatabase.cpp" />
     <ClCompile Include="CMessage.cpp" />
     <ClCompile Include="CEpollServer.cpp" />
     <ClCompile Include="Function.cpp" />
@@ -172,7 +172,7 @@
     <ClCompile Include="SampleRestApi.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="dbconnection.h" />
+    <ClInclude Include="CDatabase.h" />
     <ClInclude Include="CMessage.h" />
     <ClInclude Include="CEpollServer.h" />
     <ClInclude Include="Function.h" />
