--- a/src/Server/Server.vcxproj
+++ b/src/Server/Server.vcxproj
@@ -168,6 +168,7 @@
     <ClCompile Include="CEpollServer.cpp" />
     <ClCompile Include="Function.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="myRestAPI.cpp" />
     <ClCompile Include="RestApiServer.cpp" />
     <ClCompile Include="SampleRestApi.cpp" />
   </ItemGroup>
@@ -176,6 +177,7 @@
     <ClInclude Include="CMessage.h" />
     <ClInclude Include="CEpollServer.h" />
     <ClInclude Include="Function.h" />
+    <ClInclude Include="myRestAPI.h" />
     <ClInclude Include="RestApiServer.h" />
     <ClInclude Include="SampleRestApi.h" />
     <ClInclude Include="stdafx.h" />
