네트워크 카테고리 API 구현
- 네트워크 카테고리 리스트 API'
- 네트워크 정보 조회 API
- 네트워크 정보 등록 API
- 네트워크 정보 수정 API
- 네트워크 정보 삭제 API

--- a/Src/Hurryup_Server/Hurryup_Server.vcxproj
+++ b/Src/Hurryup_Server/Hurryup_Server.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="CDeviceRestApi.cpp" />
     <ClCompile Include="CInspectionApi.cpp" />
     <ClCompile Include="CMessage.cpp" />
+    <ClCompile Include="CNetworkCategoryRestApi.cpp" />
     <ClCompile Include="CPolicyRestApi.cpp" />
     <ClCompile Include="CRestApiServer.cpp" />
     <ClCompile Include="CTestRestApi.cpp" />
@@ -143,6 +144,7 @@
     <ClInclude Include="CDeviceRestApi.h" />
     <ClInclude Include="CInspectionApi.h" />
     <ClInclude Include="CMessage.h" />
+    <ClInclude Include="CNetworkCategoryRestApi.h" />
     <ClInclude Include="CPolicyRestApi.h" />
     <ClInclude Include="CRestApiServer.h" />
     <ClInclude Include="CServer.h" />
