대시보드 관련 API 구현
- 대시보드 통계지수 조회
- 대시보드 시간별 전체 로그 개수 조회
- 대시보드 공격 유형별 로그 정보 조회
- 대시보드 공격 유형별 시간별 로그 개수 조회
- 대시보드 구성별 로그 비율 조회
- 대시보드 대응 정책 리스트 조회

--- a/Src/Hurryup_Server/Hurryup_Server.vcxproj
+++ b/Src/Hurryup_Server/Hurryup_Server.vcxproj
@@ -126,10 +126,12 @@
     <ClCompile Include="CAgentApi.cpp" />
     <ClCompile Include="CAgentServer.cpp" />
     <ClCompile Include="CApi.cpp" />
+    <ClCompile Include="CDashBoardRestApi.cpp" />
     <ClCompile Include="CDatabase.cpp" />
     <ClCompile Include="CDeviceRestApi.cpp" />
     <ClCompile Include="CInspectionApi.cpp" />
     <ClCompile Include="CMessage.cpp" />
+    <ClCompile Include="CMonitoringRestApi.cpp" />
     <ClCompile Include="CNetworkCategoryRestApi.cpp" />
     <ClCompile Include="CPolicyRestApi.cpp" />
     <ClCompile Include="CRestApiServer.cpp" />
@@ -141,10 +143,12 @@
     <ClInclude Include="CAgentApi.h" />
     <ClInclude Include="CAgentServer.h" />
     <ClInclude Include="CApi.h" />
+    <ClInclude Include="CDashBoardRestApi.h" />
     <ClInclude Include="CDatabase.h" />
     <ClInclude Include="CDeviceRestApi.h" />
     <ClInclude Include="CInspectionApi.h" />
     <ClInclude Include="CMessage.h" />
+    <ClInclude Include="CMonitoringRestApi.h" />
     <ClInclude Include="CNetworkCategoryRestApi.h" />
     <ClInclude Include="CPolicyRestApi.h" />
     <ClInclude Include="CRestApiServer.h" />
