--- a/Src/Hurryup_Server/Hurryup_Server.vcxproj
+++ b/Src/Hurryup_Server/Hurryup_Server.vcxproj
@@ -137,6 +137,7 @@
     <ClCompile Include="CRestApiServer.cpp" />
     <ClCompile Include="CSecurityCategoryRestApi.cpp" />
     <ClCompile Include="CTestRestApi.cpp" />
+    <ClCompile Include="Cutils.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -155,7 +156,9 @@
     <ClInclude Include="CSecurityCategoryRestApi.h" />
     <ClInclude Include="CServer.h" />
     <ClInclude Include="CTestRestApi.h" />
+    <ClInclude Include="Cutils.h" />
     <ClInclude Include="DataPattern.h" />
+    <ClInclude Include="new_packet.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
